// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatusBadge > matches snapshot for CANCELLED in dark 1`] = `
<div
  class="m_347db0ec mantine-Badge-root"
  data-variant="light"
  style="--badge-radius: var(--mantine-radius-sm); --badge-bg: var(--mantine-color-red-light); --badge-color: var(--mantine-color-red-light-color); --badge-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
>
  <span
    class="m_5add502a mantine-Badge-label"
  >
    Cancelled
  </span>
</div>
`;

exports[`StatusBadge > matches snapshot for CANCELLED in light 1`] = `
<div
  class="m_347db0ec mantine-Badge-root"
  data-variant="light"
  style="--badge-radius: var(--mantine-radius-sm); --badge-bg: var(--mantine-color-red-light); --badge-color: var(--mantine-color-red-light-color); --badge-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
>
  <span
    class="m_5add502a mantine-Badge-label"
  >
    Cancelled
  </span>
</div>
`;

exports[`StatusBadge > matches snapshot for CONFIRMED in dark 1`] = `
<div
  class="m_347db0ec mantine-Badge-root"
  data-variant="light"
  style="--badge-radius: var(--mantine-radius-sm); --badge-bg: var(--mantine-color-terracotta-light); --badge-color: var(--mantine-color-terracotta-light-color); --badge-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
>
  <span
    class="m_5add502a mantine-Badge-label"
  >
    Confirmed
  </span>
</div>
`;

exports[`StatusBadge > matches snapshot for CONFIRMED in light 1`] = `
<div
  class="m_347db0ec mantine-Badge-root"
  data-variant="light"
  style="--badge-radius: var(--mantine-radius-sm); --badge-bg: var(--mantine-color-terracotta-light); --badge-color: var(--mantine-color-terracotta-light-color); --badge-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
>
  <span
    class="m_5add502a mantine-Badge-label"
  >
    Confirmed
  </span>
</div>
`;

exports[`StatusBadge > matches snapshot for DRAFT in dark 1`] = `
<div
  class="m_347db0ec mantine-Badge-root"
  data-variant="light"
  style="--badge-radius: var(--mantine-radius-sm); --badge-bg: var(--mantine-color-gray-light); --badge-color: var(--mantine-color-gray-light-color); --badge-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
>
  <span
    class="m_5add502a mantine-Badge-label"
  >
    Draft
  </span>
</div>
`;

exports[`StatusBadge > matches snapshot for DRAFT in light 1`] = `
<div
  class="m_347db0ec mantine-Badge-root"
  data-variant="light"
  style="--badge-radius: var(--mantine-radius-sm); --badge-bg: var(--mantine-color-gray-light); --badge-color: var(--mantine-color-gray-light-color); --badge-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
>
  <span
    class="m_5add502a mantine-Badge-label"
  >
    Draft
  </span>
</div>
`;

exports[`StatusBadge > matches snapshot for IN_PROGRESS in dark 1`] = `
<div
  class="m_347db0ec mantine-Badge-root"
  data-variant="light"
  style="--badge-radius: var(--mantine-radius-sm); --badge-bg: var(--mantine-color-terracotta-light); --badge-color: var(--mantine-color-terracotta-light-color); --badge-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
>
  <span
    class="m_5add502a mantine-Badge-label"
  >
    In progress
  </span>
</div>
`;

exports[`StatusBadge > matches snapshot for IN_PROGRESS in light 1`] = `
<div
  class="m_347db0ec mantine-Badge-root"
  data-variant="light"
  style="--badge-radius: var(--mantine-radius-sm); --badge-bg: var(--mantine-color-terracotta-light); --badge-color: var(--mantine-color-terracotta-light-color); --badge-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
>
  <span
    class="m_5add502a mantine-Badge-label"
  >
    In progress
  </span>
</div>
`;

exports[`StatusBadge > matches snapshot for RELEASED in dark 1`] = `
<div
  class="m_347db0ec mantine-Badge-root"
  data-variant="light"
  style="--badge-radius: var(--mantine-radius-sm); --badge-bg: var(--mantine-color-terracotta-light); --badge-color: var(--mantine-color-terracotta-light-color); --badge-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
>
  <span
    class="m_5add502a mantine-Badge-label"
  >
    Released
  </span>
</div>
`;

exports[`StatusBadge > matches snapshot for RELEASED in light 1`] = `
<div
  class="m_347db0ec mantine-Badge-root"
  data-variant="light"
  style="--badge-radius: var(--mantine-radius-sm); --badge-bg: var(--mantine-color-terracotta-light); --badge-color: var(--mantine-color-terracotta-light-color); --badge-bd: calc(0.0625rem * var(--mantine-scale)) solid transparent;"
>
  <span
    class="m_5add502a mantine-Badge-label"
  >
    Released
  </span>
</div>
`;
